--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue2-dragula",
-  "version": "2.5.2",
+  "version": "2.5.3",
   "description": "Vue 2 wrapper for dragula",
   "main": "dist/vue-dragula.js",
   "files": [
@@ -20,8 +20,7 @@
     "lint": "eslint src"
   },
   "dependencies": {
-    "dragula": "3.7.2",
-    "lodash.merge": "^4.6.0"
+    "dragula": "3.7.2"
   },
   "devDependencies": {
     "babel-core": "^6.2.1",
